--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -12,7 +12,9 @@
     "expo": "~54.0.30",
     "expo-status-bar": "~3.0.9",
     "react": "19.1.0",
-    "react-native": "0.81.5"
+    "react-native": "0.81.5",
+    "react-native-gesture-handler": "~2.28.0",
+    "react-native-reanimated": "~4.1.1"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
